# Dupletti

./: .gitignore  Cargo.toml  LICENSE.md  README.md  create_testdata.sh
src/: database.rs  filehashing.rs  interface.rs  main.rs  similarities.rs  videohash.rs  videohistogram.rs
templates/: results.html.tera  videohash.html.tera
